volexc/tests/ui/parse_union_missing_index.out
Error: found ';' expected integer
   ╭─[ parse_union_missing_index.vol:3:15 ]
   │
 3 │     Ok(u32) = ;
   │               ┬  
   │               ╰── Unexpected ';'
   │ 
   │ Note: Expected one of: integer
───╯